implement all for given task
